* ADDED: `image->save' to allow saving in a source_sink object, so image
  data can be written to memory buffers.  Only works for jpeg en pnm formats.

* ADDED: @pce->debugging_subject to allow using pcedebug/1 from user code.

* FIXED: More graceful handling of term-expansion errors, especially 
  useful for the on-the-fly cross-referencing PceEmacs.

* ADDED: `date<-rfc_string' to return date in RFC compatible format

* FIXED: Moved dialog-grid (<-above, etc.) unlinking from class dialog_item
  to class graphical: dialog windows get inconsistent if a non-dialog item
  is deleted.

* ADDED: Allow for :- pce_end_class(Class), providing additional documentation
  and error checking.

* ADDED: Book icon to manual tool main window.

* ADDED: `image->save' support for saving JPEG files (Both Unix and Win32).

* ADDED: library(doc/html): handle <BASE> element and ignore the content
  of <SCRIPT> elements.

* INSTALL: (Unix) changed behaviour of `make install' to be equivalent to
  the old `make dv-install'.  For this reason changed the name of the
  install-program to xpce-install rather than just install.

* FIXED: Document rendering (prolog/lib/doc) to pass table_cell options
  properly.  Now also passes <TR> options properly.  Currently only honours
  the BGCOLOR option of a table-row.

* FIXED: Drawing background of tables if <-border = 0.

* FIXED: Win32 native font specification to allow spaces in string
  arguments, which is needed for the face() argument.  Spotted by
  Anjo Anjewierden.

VERSION 5.0.9
=============

* FIXED: XPCE's library for the modified definition of select/3 in SWI-Prolog
  3.3.11.

* FIXED: Properly report an error when adding graphicals to a device that
  has not yet been initialised.  This fixes the case where class device
  is subclassed and the programmer omits send_super(Dev, initialise) before
  adding graphicals.

* CHANGED: pce_error/1, pce_warn/1 and pce_info/1 now all hook directly into